tests/transpiler/x/scala/two-sum.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/two-sum.scala:5: error: value size is not a member of Any
    val n: Int = nums.size
                      ^
/workspace/mochi/tests/transpiler/x/scala/two-sum.scala:8: error: Any does not take parameters
    if (nums(i) + nums(j) == target) {
            ^
/workspace/mochi/tests/transpiler/x/scala/two-sum.scala:8: error: Any does not take parameters
    if (nums(i) + nums(j) == target) {
                      ^
/workspace/mochi/tests/transpiler/x/scala/two-sum.scala:18: error: Any does not take parameters
    println(result(0))
                  ^
/workspace/mochi/tests/transpiler/x/scala/two-sum.scala:19: error: Any does not take parameters
    println(result(1))
                  ^
5 errors found
