tests/transpiler/x/scala/two-sum.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:43:43 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def twoSum(nums: Any, target: Int): Any = {
    val n: Int = nums.size
    for (i <- 0 until n) {
    for (j <- i + 1 until n) {
    if (nums(i) + nums(j) == target) {
    return ArrayBuffer(i, j)
  }
  }
  }
    return ArrayBuffer(0 - 1, 0 - 1)
  }

  def main(args: Array[String]): Unit = {
    val result = twoSum(ArrayBuffer(2, 7, 11, 15), 9)
    println(result(0))
    println(result(1))
  }
}
